# http_1_2_3_restfulapi_pyscript_hypercorn_starlette

./: README.md  pyproject.toml
src/: server_app.py
src/templates/: client_main.py  client_pyscript.html
