[tool.poetry]
name = "http-restfulapi-pyscript-hypercorn-starlette"
version = "0.1.0"
description = ""
authors = ["Sungwon Lee <drsungwon@khu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyscript = "^0.2.5"
hypercorn = "^0.17.3"
starlette = "^0.38.1"
h3 = "^3.7.7"
aioquic = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
